Image not showing trying to fix

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ p {
 }
 
 .banner-image {
-    background-image: url(/images/donation13.jpg);
+    background-image: url(./images/donation13.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
